<resources>
    <string name="app_name">downloader-app-android</string>
    <string name="get_information">Get information</string>
    <string name="download">Download</string>

    <string name="address">Address</string>
    <string name="file_size">File size</string>
    <string name="zero">0</string>
    <string name="file_type">File type</string>
    <string name="downloaded_bytes">Downloaded bytes</string>
    <string name="default_site">https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.4.36.tar.xz</string>

    <string name="notification_title">download app notification</string>

    <string name="downloading_error">Downloading Error!</string>
</resources>