<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="332dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDownload">

        <TextView
            android:id="@+id/textDownloadedBytes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/downloaded_bytes" />

        <TextView
            android:id="@+id/downloadedBytesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGetInformation">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="340dp"

            android:layout_height="33dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="visible">


            <TextView
                android:id="@+id/textFileSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_size" />

            <TextView
                android:id="@+id/fileSizeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/zero" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="33dp"

            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textFileType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_type" />

            <TextView
                android:id="@+id/fileTypeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/zero" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="299dp"
            android:layout_height="58dp"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/default_site"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonGetInformation"
        android:layout_width="338dp"
        android:layout_height="42dp"
        android:text="@string/get_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/buttonDownload"
        android:layout_width="339dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="350dp"
        android:layout_height="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>